# nx

./: .gitignore  README.md  RUN.md
svc/api/: Dockerfile  alembic.ini  pyproject.toml
svc/api/nx_api/: main.py
svc/api/nx_api/core/: config.py  di_proxy.py  ioc.py  lifespan.py  middleware.py  provider.py
svc/api/nx_api/dto/: __init__.py  auth.py  lead.py  user.py
svc/api/nx_api/exc/: __init__.py  handlers.py  http.py
svc/api/nx_api/infra/db/: config.py  provider.py  repo.py
svc/api/nx_api/infra/db/migrations/: env.py
svc/api/nx_api/infra/redis/: config.py  provider.py
svc/api/nx_api/infra/smtp/: config.py  provider.py
svc/api/nx_api/repo/: __init__.py  auth_sess.py  lead.py  provider.py  refresh_token.py  user.py
svc/api/nx_api/router/: __init__.py  auth.py  lead.py  user.py
svc/api/nx_api/svc/auth/: exc.py  guard.py  provider.py  pwd_crypt.py  reject_if_auth.py
svc/api/nx_api/svc/auth/ia/: login.py  (+5 more)
svc/api/nx_api/svc/crud/: crud_abc.py  crud_svc.py  list_abc.py  list_svc.py  query_utils.py  router.py  types_.py
svc/api/nx_api/svc/email/: abstract.py  smtp_send.py
svc/api/nx_api/svc/jwt/: abstract.py  config.py  errors.py  exc.py  provider.py  schemas.py  service.py
svc/api/nx_api/svc/lead/: provider.py  svc.py
svc/api/nx_api/svc/url_token/: abstract.py  config.py  exc.py  provider.py  service.py
svc/api/nx_api/svc/user/: provider.py  service.py
svc/api/nx_api/tmpls/: msg_email_confirm.html
svc/api/nx_api/utils/: ioc_builder.py  result.py
svc/api/nx_api/utils/pydantic/: base_model.py  load.py
svc/api/ssl/: private.key  public.crt
(+51 files in other folders)
