[tool.poetry]
name = "nx"
version = "0.1.0"
description = ""
authors = ["Артур Лагунов <lagunovartur@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
dishka = "^1.5.0"
alembic = "^1.15.1"
pydantic-settings = "^2.8.1"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
yarl = "^1.18.3"
attrs = "^25.3.0"
aiohttp = "^3.11.14"
pyjwt = "^2.10.1"
passlib = "^1.7.4"
itsdangerous = "^2.2.0"
redis = "^5.2.1"
aiosmtplib = "^4.0.0"
jinja2 = "^3.1.6"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"
types-passlib = "^1.7.7.20250401"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
